xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
//
// Misc
// --------------------------------------------------

// Left menu2 =================================================================
.leftmenu2{
  background-color: #F0F0EE; 
  padding: 5px;
  a {
    img {
      margin: 2px;
    }
  }
}

// Tabbar =====================================================================

.xwikitabbar { // Used by: AllDocs, DocExtra
  .nav;
  .nav-tabs;
  margin: 0;
}

// Labels =====================================================================

.language {
  &-translation, 
  &-default {
    .label;
    .label-default;
    font-weight: 400;
  }
  &-default {
    font-style: italic;
  }
  &-current {
    .label-primary;
    font-weight: 700;
  }
}

// XDialogs ===================================================================

.xdialog-content{
  .buttonwrapper{
    input.button{
      margin: 2px;
    }
  }
}

// Wiki Code =================================================================

.wiki-code{
  width: 100%;
}

// Messages ===================================================================

/* Used by: Toc, Box Macros */
.floatinginfobox {
  float: right;
  margin: @padding-base-vertical 0 @padding-base-vertical @padding-base-horizontal;
}

// Bugs =======================================================================

// FIX: AllDocs: Tree 
table {
  &.listTable table { // PROBLEM: General styling reset
    width: auto;
  }
}

// FIX: Administration: Panel Wizard
.xwikitabbar {
  #panelEditorSteps& { // PROBLEM: Mapping and usage
    &>li { 
      float: none;
      display: inline-block;
    }
    &:after {
      clear: none;
    }
  }
}

// FIX: Editor
.editor-wysiwyg #titleinput { // IMPROVEMENT: Better spacing
  //padding-bottom: @padding-grid-vertical;
}

// FIX: Livetables
.xwiki-livetable {
  .pagesizeselect { // PROBLEM: General styling reset
    height: auto;
  }
}

// FIX: Livetables, History Table
.xwiki-livetable,
.paginationFilter {
  .pagination { // PROBLEM: Usage of a class with meaning inside Bootstrap
    margin-top: 0;
    margin-bottom: 0;
  }
}

// FIX: WYSIWYG
.gwt-MenuBar-horizontal { // PROBLEM: General styling reset
  table {
    width: auto; 
  }
}

.gwt-MenuBarPopup, // PROBLEM: General styling reset
.gwt-PopupPanel {
  & table { 
    margin-bottom: 0;
    td {
      padding: 0;
      border-top: 0;
    }
  }
}

// FIX: History Table
.xwikidatatable .row:after, .xwikidatatable .row:before { // PROBLEM: Usage of a class with meaning inside Bootstrap
  display: none;
}

// FIX: User Profile labels
.user-page-pane .label { // PROBLEM: Usage of a class with meaning inside Bootstrap
  display: inherit;
  font-size: inherit;
  padding: inherit;
  text-align: inherit;
}

// FIX: Blog Post footer
.entry-footer address { // PROBLEM: Usage of a class with meaning inside Bootstrap
  display: inline;
  margin: 0;
}

// FIX: Date Picker
.calendar_date_select {
  div.cds_header select.month {
    width: 80px;
  }
  td {
    padding: 0;
  }
}

// FIX: Auto-save
.skin-flamingo #autosaveControl input.autosave-frequency{
  width: 3em;
}

// FIX: user profile
.skin-flamingo{
  .user-menu-profile:before, .user-menu-preferences:before, .user-menu-watchlist:before, .user-menu-network:before, .user-menu-wikis:before, .user-menu-dashboard:before{
    display: none;
  }
}

// FIX: file upload
.skin-flamingo{
  .upload-status-container{
    .buttonwrapper a, .upload-canceled-label{
      .btn-xs();
    }
  }
}

// FIX: app bar
.applicationPanelMoreContainer ul li > span > a{
  &:extend(.nav > li > a);
  &:extend(.nav-pills > li > a);
  
  &:hover{
    &:extend(.nav > li > a:hover);
  }
}

// FIX: login
#loginForm .panel{
  max-width: 450px;
  margin: auto;
}

// FIX: Tree view (see XWIKI-10514).
#XWEWrapper{
  // Fix for IE11 (the first column is too large)
  tr > td:first-child{
    width: 0;
  }
  td{
    vertical-align: middle;
  }
  // The input field that displays the selected page name should not override the tags section
  margin-bottom: @input-height-base;
}

// FIX: User profile
.skin-flamingo{
  #user-menu-col{
    width: 13em;
    @media (max-width: @screen-xs-min) {
      float: none;
      margin: auto;
    }
  }

  #user-page-content{
    @media (max-width: @screen-xs-min) {
      margin-left: 0;
    }
  }
}

// FIX: Drop down must be on front of Tree View (XWIKI-10633)
.dropdown-menu{
  z-index: 500000;
}

// Fix the Tree view (XWIKI-10633)
#XWEWrapper{
  .gridBody{
    overflow: hidden;
  }
  
  .normal table, .normalOver table, .normalDown table{
    background-color: transparent;
  }
  
  .vScrollThumbGrip, .vScrollThumbGripOver, .vScrollThumbGripDisabled, .vScrollThumbGripDown{
    margin-left: 2px\0; // IE hack: this rule only occurs on IE.
  }  
}

// FIX: Syntax help page (XWIKI-10675)
.syntax-menu:extend(.admin-menu all){}
#syntax-page-content:extend(#admin-page-content all){}
.skin-flamingo{
  #syntax-page-content{
    margin-left: 0;
  }
}

// Export ---------------------------------------------------------------------
#exportModal{
  .modal-body{
    a, button{
      margin: 2px;
    }
  }
}

// Loading --------------------------------------------------------------------
.loading {
  background: transparent url(@xwiki-icon-spinner) no-repeat center;
}

// Importer -------------------------------------------------------------------
#package .checkbox{
  min-height: 10px;
  margin: 0;
  padding: 0.3em;
}

// Importer options
.historyStrategyOption{
  input[type="radio"], input[type="checkbox"] {
    min-height: 10px;
    margin-top: 0;
    margin-bottom: 0;
  }
}

